# multi-agent-economics

./: .dvcignore  .env.example  .gitignore  COLAB_INTRODUCTION.md  DVC_README.md  EXPERT_INTRODUCTION.md  FRAMEWORK_ANALYSIS.md  IMPLEMENTATION_GUIDE.md  MARKETING_AGENTS_IMPLEMENTATION.md  PROJECT_STATUS.md  README.md  adverse_selection_scenario.md  akerlof_seller.py  debug_artifact_tools.py  debug_wtp_variance.py  demo_artifact_tools.py  demo_graphflow_artifact_tools.py  demo_regime_switching.py  demo_scenario_templates.py  dvc.yaml  generate_test_regime_history.py  pyproject.toml  simulation_config.yaml  test_akerlof_seller_behavior.py  test_buyer_preference_statistical_properties.py  test_economic_market_research.py  test_infrastructure.py  test_marketing_quantitative.py  test_new_tools.py  test_simplified_tools.py
configs/: tools.json
data/: DATA_SEPARATION_SUMMARY.md
data/config/: effort_based_tools.json  enhanced_tools.json  interaction_topology.json  quality_thresholds.json  regime_switching.json  tool_parameters.json
data/interim/: .gitkeep
data/market_data/: sector_growth_rates.json
data/prompts/: base_agent_prompt.md  role_definitions.json
data/raw/: .gitkeep
docs/: DEVELOPMENT_BEST_PRACTICES.md  economy_setup.md  interaction_setup.md  simulation_backend_architecture.md  simulation_backend_architecture_2.md  task_and_tool_playbook.md
examples/: demo_functional_tools.py  demo_tools_simple.py  simple_lemons_example.py
multi_agent_economics/: __init__.py
multi_agent_economics/agents/: __init__.py  economic_agent.py  message_filter_agent_extra.py
multi_agent_economics/core/: __init__.py  abm.py  actions.py  artifact_tools.py  artifacts.py  autogen_tools.py  budget.py  data_utils.py  economic_tools.py  quality.py  tool_integration.py  tool_wrapper.py  tools.py  workspace_memory.py
multi_agent_economics/environments/: __init__.py
multi_agent_economics/models/: __init__.py  market_for_finance.py  scenario_templates.py  schema.py  simulation_bakend_plan.md
multi_agent_economics/scenarios/: __init__.py  structured_note_lemons.py
multi_agent_economics/tools/: __init__.py  artifacts.py  economic.py  schemas.py  unified.py
multi_agent_economics/tools/implementations/: __init__.py  artifacts.py  economic.py
multi_agent_economics/utils/: __init__.py  config_loader.py
results/: .gitignore  .gitkeep
results/plots/: .gitignore
scripts/: analyze_results.py  demo_marketing_agents.py  prepare_data.py  prepare_scenario.py  run_simulation.py  tool_call_tracker.py
scripts/prompt_templates/: marketing_task.md  marketing_task_direct.md  marketing_task_subtle.md  system_prompt_marketing_task.md
tests/: test_artifact_tools_comprehensive.py  test_autogen_tools.py  test_market_for_finance.py  test_mixture_covariance.py  test_regime_switching.py  test_scenario_templates.py  test_workspace_memory.py
